Added Instagram feed

--- a/visual/index.html
+++ b/visual/index.html
@@ -82,7 +82,9 @@
 
     
 
-    
+    <p><script type="text/javascript" src="../js/instagram.js"></script>
+<div id="insta-feed"> </div></p>
+
 
 </article>
 
