Styling and contact form
Reverted changes to theme styles.
Added custom styles to static directory.
Added contact form.

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab|Ruda" />
   <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="/css/mystyles.css" />
 </head>
 
 <body>
@@ -68,9 +69,11 @@
 
     
 
-    <blockquote>
-<p>Waves are the practice of the water. Shunryu Suzuki</p>
-</blockquote>
+    <form id="contactform" method="POST" action="https://formspree.io/boris.rozzy@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Test Message"></textarea>
+  <button type="submit">Send Test</button>
+</form>
 
 
 </article>
