Contact form styling

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab|Ruda" />
   <link rel="stylesheet" type="text/css" href="/css/styles.css" />
   <link rel="stylesheet" type="text/css" href="/css/mystyles.css" />
-</head>
+  </head>
 
 <body>
   <div id="container">
@@ -71,8 +71,8 @@
 
     <form id="contactform" method="POST" action="https://formspree.io/boris.rozzy@gmail.com">
   <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Test Message"></textarea>
-  <button type="submit">Send Test</button>
+  <textarea rows="10" name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
 </form>
 
 
