--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li>1 min read</li>
     </ul>
 </aside>
-            <p>http://yearendshow.schoolofdesign.ca Tasked with designing and building a website for George Brown College 2019&rsquo;s year end show alongside a small team of people.
+            <p>yearendshow.schoolofdesign.ca Tasked with designing and building a website for George Brown College 2019&rsquo;s year end show alongside a small team of people.
 For this project, I chose WordPress as the starting point.</p>
             
             <a href="/posts/gbc-next/">Read more&hellip;</a>
