Added links to tops of pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -69,7 +69,9 @@
 
     
 
-    <form id="contactform" method="POST" action="https://formspree.io/boris.rozzy@gmail.com">
+    <p><center><a href="mailto:contact@BorisR.dev">contact@BorisR.dev</a></center></p>
+
+<form id="contactform" method="POST" action="https://formspree.io/boris.rozzy@gmail.com">
   <input type="email" name="email" placeholder="Your email">
   <textarea rows="10" name="message" placeholder="Your message"></textarea>
   <button type="submit">Send</button>
