--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   
 </div>
 
+<p>Website is being reworked and will be updated soon. Please have a look meanwhile.</p> 
 
 <section id="home">
         <ul>
